# TaskGuard

./: .gitignore  CMakeLists.txt  README.md  TaskGuard_en_US.ts  about_author.cpp  about_author.ui  application.qrc  encryption.cpp  encryption.h  encryption.ui  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recources.rc  textindentdelegate.cpp  textindentdelegate.h  version.h
resources/: application.qrc  recources.rc
src/: about_author.h  about_author.ui  about_qt_window.cpp  about_qt_window.h  about_qt_window.ui  encryption.cpp  encryption.h  encryption.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plugin_keyghost.cpp  plugin_keyghost.h  plugin_keyghost.ui  plugin_passgen.cpp  plugin_passgen.h  plugin_passgen.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  string_encryption.cpp  string_encryption.h  updatechecker.cpp  updatechecker.h  updatechecker.ui  version.cpp  version.h
translations/: TaskGuard_en_US.ts  TaskGuard_es_ES.ts  TaskGuard_ru_RU.ts  TaskGuard_uk_UA.ts  en_US.ts  ru_RU.ts  uk_UA.ts
